--- a/source/Makefile
+++ b/source/Makefile
@@ -2,7 +2,7 @@ SHELL = /bin/bash
 COMPILERFLAGS = -v -Wall -O2
 CFLAGS = $(COMPILERFLAGS) 
 CC = g++ 
-EXE = magchain
+EXE = magchain_v2
 
 SOURCES = magchain.cpp aggregate.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
